--- a/service_pages/attic_cleanout.html
+++ b/service_pages/attic_cleanout.html
@@ -15,6 +15,7 @@
   <header>
     <h1>Attic Cleanout</h1>
     <p>Declutter attics quickly — boxes, old furniture, and debris removed with care.</p>
+    <p class="rate-banner">Priced by truckload. Attics often require extra labor for stairs or tight spaces (+$50/hr per worker).</p>
   </header>
 
   <div id="form-container">
@@ -39,15 +40,18 @@
       <label for="pickup-address">Property Address:</label>
       <div id="geocoder" style="margin-bottom: 15px;"></div>
 
-      <label for="volume">Estimated Volume:</label>
-      <select id="volume" name="volume">
-        <option value="">Select one</option>
-        <option>Few Items</option>
-        <option>Quarter Truck</option>
-        <option>Half Truck</option>
-        <option>Three-Quarter Truck</option>
-        <option>Full Truck</option>
-      </select><br><br>
+   <label for="volume">Approximate Truckload:</label>
+     <select id="volume" name="volume">
+     <option value="">Select one</option>
+     <option value="few">Few Items — $150–$200</option>
+     <option value="quarter">1/4 Truck — $250–$300</option>
+     <option value="half">1/2 Truck — $400–$500</option>
+     <option value="three-quarter">3/4 Truck — $550–$650</option>
+     <option value="full">Full Truck — $700–$850+</option>
+     </select>
+     <br><br>
+
+
 
       <label for="access">Access & Stairs:</label>
       <select id="access" name="access">
@@ -69,20 +73,23 @@
       <p id="mileage-distance">Distance from HQ: 0 miles</p>
     </section>
 
-    <section style="grid-column: span 3; text-align: center;">
+    </div>
+
+    <div style="text-align: center; margin-top: 20px;">
       <button id="book-services-button" style="background-color:#4CAF50;color:white;padding:15px 30px;font-size:1.2em;border:none;border-radius:8px;cursor:pointer;transition:background-color 0.3s ease;">Book Attic Cleanout</button>
       <div class="green-box">
         <h3>Fresh space upstairs.</h3>
         <p>We donate and recycle whenever possible.</p>
       </div>
-    </section>
-  </div>
+   
+  <script src="../COMPONENTS/footer-magic.js"></script>    
 
   <script src="/service_js/book-now-redirect.js"></script>
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
-  <script src="/service_js/TF2.js"></script>
+  <script src="/service_js/bridge.js"></script>
+
 </body>
 </html>
