--- a/service_pages/estate_cleanout.html
+++ b/service_pages/estate_cleanout.html
@@ -15,6 +15,7 @@
   <header>
     <h1>Full Estate Cleanout</h1>
     <p>Complete property clearing: furniture, appliances, and contents — donation and disposal handled.</p>
+    <p class="rate-banner">Priced by truckload. Hoarder cleanouts usually require multiple loads. Pricing starts at $1,500+.</p>
   </header>
 
   <div id="form-container">
@@ -61,22 +62,32 @@
     <section id="map-container">
       <div id="map"></div>
       <p id="mileage-distance">Distance from HQ: 0 miles</p>
+      <h4>Pricing</h4>
+      <p><strong>Starts at $1,500+</strong> (multiple truckloads). Final price depends on volume, number of rooms, and sorting required.</p>
+      <ul style="margin:.5rem 0 0 1rem;">
+      <li>On-site estimate required before work begins.</li>
+      <li>Heavy debris and hazardous materials quoted separately.</li>
+      <li>Additional labor may apply (+$50/hr per worker).</li>
+      </ul>
     </section>
 
-    <section style="grid-column: span 3; text-align: center;">
+    </div>
+
+    <div style="text-align: center; margin-top: 20px;">
       <button id="book-services-button" style="background-color:#4CAF50;color:white;padding:15px 30px;font-size:1.2em;border:none;border-radius:8px;cursor:pointer;transition:background-color 0.3s ease;">Book Estate Cleanout</button>
       <div class="green-box">
         <h3>Handled end‑to‑end.</h3>
         <p>From sorting to final sweep — we coordinate everything.</p>
       </div>
-    </section>
-  </div>
+    
+  <script src="../COMPONENTS/footer-magic.js"></script>
 
   <script src="/service_js/book-now-redirect.js"></script>
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
-  <script src="/service_js/TF2.js"></script>
+  <script src="/service_js/bridge.js"></script>
+
 </body>
 </html>
