--- a/service_pages/shed_deck_cleanout.html
+++ b/service_pages/shed_deck_cleanout.html
@@ -15,6 +15,7 @@
   <header>
     <h1>Shed &amp; Deck Cleanout</h1>
     <p>Clear sheds, patios, and decks — yard waste and junk hauled away.</p>
+    <p class="rate-banner">Priced by truckload. Deck removals include a demolition surcharge of (+$100–$300).</p>
   </header>
 
   <div id="form-container">
@@ -59,20 +60,23 @@
       <p id="mileage-distance">Distance from HQ: 0 miles</p>
     </section>
 
-    <section style="grid-column: span 3; text-align: center;">
+    </div>
+
+    <div style="text-align: center; margin-top: 20px;">
       <button id="book-services-button" style="background-color:#4CAF50;color:white;padding:15px 30px;font-size:1.2em;border:none;border-radius:8px;cursor:pointer;transition:background-color 0.3s ease;">Book Shed &amp; Deck Cleanout</button>
       <div class="green-box">
         <h3>Outdoor reset.</h3>
         <p>Debris gone, space ready to enjoy.</p>
       </div>
-    </section>
-  </div>
+    
+  <script src="../COMPONENTS/footer-magic.js"></script>
 
   <script src="/service_js/book-now-redirect.js"></script>
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
-  <script src="/service_js/TF2.js"></script>
+  <script src="/service_js/bridge.js"></script>
+
 </body>
 </html>
