--- a/service_pages/commercial.html
+++ b/service_pages/commercial.html
@@ -17,6 +17,7 @@
   <header>
     <h1>Commercial / Office Moving</h1>
     <p>Professional relocations for offices, retail spaces, and small warehouses — minimal downtime, maximum care.</p>
+    <p class="rate-banner">Starting at $175/hr (2.5-hour minimum)</p>
   </header>
   
   <div id="form-container">
@@ -47,17 +48,6 @@
       <!-- DROP-OFF: simple text input (no geocoder) -->
       <label for="dropoff-address">Drop-off Address:</label>
       <input type="text" id="dropoff-address" name="dropoff-address" placeholder="Enter drop-off address"><br><br>
-
-      <!-- Crew Size (no pricing calc) -->
-      <label for="crew-size">Choose Your Crew:</label>
-      <select id="crew-size" name="crew-size">
-        <option value="">Select crew size</option>
-        <option value="1-2">1–2 movers — $150/hr</option>
-        <option value="3">3 movers — $225/hr</option>
-      </select><br><br>
-
-      <label for="move-date">Preferred Move Date:</label>
-      <input type="date" id="move-date" name="move-date"><br><br>
 
       <label for="move-size">Move Size:</label>
       <select id="move-size" name="move-size">
@@ -97,8 +87,10 @@
       <p id="mileage-distance">Distance from HQ: 0 miles</p>
       <p style="font-size: 0.85em; color: #777;"></p>
     </section>
+
+    </div>
     
-    <section style="grid-column: span 3; text-align: center;">
+    <div style="text-align: center; margin-top: 20px;">
       <button id="book-services-button" style="
         background-color: #4CAF50;
         color: white;
@@ -119,8 +111,8 @@
         <h3>We keep your business moving.</h3>
         <p>Thanks for choosing FlashMoving Pros. Our crew is trained to handle office tech, modular furniture, and sensitive equipment with care.</p>
       </div>
-    </section>
-  </div>
+    
+  <script src="../COMPONENTS/footer-magic.js"></script>   
 
   <!-- Shared scripts (same pattern as your template) -->
   <script src="/service_js/book-now-redirect.js"></script>
@@ -128,7 +120,7 @@
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
-  <script src="/service_js/TF2.js"></script>
+  <script src="/service_js/bridge.js"></script>
 
 </body>
 
