--- a/service_pages/eviction_cleanout.html
+++ b/service_pages/eviction_cleanout.html
@@ -15,6 +15,7 @@
   <header>
     <h1>Eviction Cleanout</h1>
     <p>Courteous, efficient property cleanouts following local regulations and timelines.</p>
+    <p class="rate-banner">Priced by truckload. Eviction cleanouts may require extra labor for sorting and removal (+$50/hr per worker).</p>
   </header>
 
   <div id="form-container">
@@ -39,6 +40,17 @@
       <label for="pickup-address">Property Address:</label>
       <div id="geocoder" style="margin-bottom: 15px;"></div>
 
+         <label for="volume">Approximate Truckload:</label>
+     <select id="volume" name="volume">
+     <option value="">Select one</option>
+     <option value="few">Few Items — $150–$200</option>
+     <option value="quarter">1/4 Truck — $250–$300</option>
+     <option value="half">1/2 Truck — $400–$500</option>
+     <option value="three-quarter">3/4 Truck — $550–$650</option>
+     <option value="full">Full Truck — $700–$850+</option>
+     </select>
+     <br><br>
+
       <label for="unit">Unit/Suite:</label>
       <input type="text" id="unit" name="unit" placeholder="e.g., Unit 2B"><br><br>
 
@@ -57,20 +69,23 @@
       <p id="mileage-distance">Distance from HQ: 0 miles</p>
     </section>
 
-    <section style="grid-column: span 3; text-align: center;">
+    </div>
+
+    <div style="text-align: center; margin-top: 20px;">
       <button id="book-services-button" style="background-color:#4CAF50;color:white;padding:15px 30px;font-size:1.2em;border:none;border-radius:8px;cursor:pointer;transition:background-color 0.3s ease;">Book Eviction Cleanout</button>
       <div class="green-box">
         <h3>Compliance first.</h3>
         <p>Handled professionally and on schedule.</p>
       </div>
-    </section>
-  </div>
+    
+  <script src="../COMPONENTS/footer-magic.js"></script>    
 
   <script src="/service_js/book-now-redirect.js"></script>
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
-  <script src="/service_js/TF2.js"></script>
+  <script src="/service_js/bridge.js"></script>
+
 </body>
 </html>
