--- a/service_pages/foreclosure_cleanout.html
+++ b/service_pages/foreclosure_cleanout.html
@@ -15,6 +15,7 @@
   <header>
     <h1>Foreclosure Cleanout</h1>
     <p>Rapid clearing for bank‑owned properties — interior, exterior, and debris removal.</p>
+    <p class="rate-banner">Priced by truckload. Extra labor for bagging and fast turnaround may apply (+$50/hr per worker).</p>
   </header>
 
   <div id="form-container">
@@ -39,6 +40,17 @@
       <label for="pickup-address">Property Address:</label>
       <div id="geocoder" style="margin-bottom: 15px;"></div>
 
+    <label for="volume">Approximate Truckload:</label>
+     <select id="volume" name="volume">
+     <option value="">Select one</option>
+     <option value="few">Few Items — $150–$200</option>
+     <option value="quarter">1/4 Truck — $250–$300</option>
+     <option value="half">1/2 Truck — $400–$500</option>
+     <option value="three-quarter">3/4 Truck — $550–$650</option>
+     <option value="full">Full Truck — $700–$850+</option>
+     </select>
+     <br><br>
+
       <label for="property-status">Status:</label>
       <select id="property-status" name="property-status">
         <option value="">Select one</option>
@@ -59,20 +71,23 @@
       <p id="mileage-distance">Distance from HQ: 0 miles</p>
     </section>
 
-    <section style="grid-column: span 3; text-align: center;">
+    </div>
+
+    <div style="text-align: center; margin-top: 20px;">
       <button id="book-services-button" style="background-color:#4CAF50;color:white;padding:15px 30px;font-size:1.2em;border:none;border-radius:8px;cursor:pointer;transition:background-color 0.3s ease;">Book Foreclosure Cleanout</button>
       <div class="green-box">
         <h3>Make-ready fast.</h3>
         <p>Reliable, insured, and compliance-focused.</p>
       </div>
-    </section>
-  </div>
+    
+  <script src="../COMPONENTS/footer-magic.js"></script>    
 
   <script src="/service_js/book-now-redirect.js"></script>
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
-  <script src="/service_js/TF2.js"></script>
+  <script src="/service_js/bridge.js"></script>
+
 </body>
 </html>
