--- a/service_pages/post_construction.html
+++ b/service_pages/post_construction.html
@@ -15,6 +15,7 @@
   <header>
     <h1>Post‑Construction Cleanup</h1>
     <p>Dust, debris, and leftover materials cleared after new builds or renovations.</p>
+    <p class="rate-banner">Priced by truckload. Heavy debris surcharge applies for drywall, tile, roofing, or wood (+$100–$200).</p>
   </header>
 
   <div id="form-container">
@@ -39,6 +40,17 @@
       <label for="pickup-address">Property Address:</label>
       <div id="geocoder" style="margin-bottom: 15px;"></div>
 
+        <label for="volume">Approximate Truckload:</label>
+     <select id="volume" name="volume">
+     <option value="">Select one</option>
+     <option value="few">Few Items — $150–$200</option>
+     <option value="quarter">1/4 Truck — $250–$300</option>
+     <option value="half">1/2 Truck — $400–$500</option>
+     <option value="three-quarter">3/4 Truck — $550–$650</option>
+     <option value="full">Full Truck — $700–$850+</option>
+     </select>
+     <br><br>
+
       <label for="scope">Scope Level:</label>
       <select id="scope" name="scope">
         <option value="">Select one</option>
@@ -59,6 +71,8 @@
       <p id="mileage-distance">Distance from HQ: 0 miles</p>
     </section>
 
+    </div>
+
     <section style="grid-column: span 3; text-align: center;">
       <button id="book-services-button" style="background-color:#4CAF50;color:white;padding:15px 30px;font-size:1.2em;border:none;border-radius:8px;cursor:pointer;transition:background-color 0.3s ease;">Book Post‑Construction Cleanup</button>
       <div class="green-box">
@@ -68,11 +82,14 @@
     </section>
   </div>
 
+  <script src="../COMPONENTS/footer-magic.js"></script>
+
   <script src="/service_js/book-now-redirect.js"></script>
   <script src="/service_js/universal-mileage.js"></script>
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
-  <script src="/service_js/TF2.js"></script>
+  <script src="/service_js/bridge.js"></script>
+
 </body>
 </html>
