--- a/service_pages/speciality.html
+++ b/service_pages/speciality.html
@@ -17,6 +17,7 @@
   <header>
     <h1>Specialty Item Moving</h1>
     <p>Expert handling for pianos, safes, antiques, artwork, and other high-value or delicate items.</p>
+    <p class="rate-banner">Starting at $200/hr (2.5-hour minimum)</p>
   </header>
 
   <div id="form-container">
@@ -31,6 +32,9 @@
 
       <label for="email">Email Address:</label>
       <input type="email" id="email" name="email" placeholder="Enter your email address">
+    
+      <label for="business-name">Business Name (if applicable):</label>
+      <input type="text" id="business-name" name="business-name" placeholder="Enter your business name">
     </section>
 
     <!-- Job Details Form -->
@@ -45,25 +49,11 @@
       <label for="dropoff-address">Drop-off Address:</label>
       <input type="text" id="dropoff-address" name="dropoff-address" placeholder="Enter drop-off address"><br><br>
 
-      <!-- Crew Size -->
-      <label for="crew-size">Choose Your Crew:</label>
-      <select id="crew-size" name="crew-size">
-        <option value="">Select crew size</option>
-        <option value="1-2">1–2 movers — $200/hr</option>
-        <option value="3">3 movers — $300/hr</option>
-      </select><br><br>
-
-      <label for="job-date">Preferred Job Date:</label>
-      <input type="date" id="job-date" name="job-date"><br><br>
-
       <label for="item-type">Type of Specialty Item(s):</label>
       <input type="text" id="item-type" name="item-type" placeholder="e.g., Grand Piano, Gun Safe, Antique Cabinet, Large Sculpture"><br><br>
 
       <label for="quantity">Number of Items:</label>
       <input type="number" id="quantity" name="quantity" min="1" placeholder="e.g., 1"><br><br>
-
-      <label for="dimensions">Approximate Dimensions / Weight:</label>
-      <input type="text" id="dimensions" name="dimensions" placeholder="e.g., 6ft × 4ft × 3ft, ~900 lb"><br><br>
 
       <label for="elevator">Elevator Access:</label>
       <select id="elevator" name="elevator">
@@ -91,7 +81,9 @@
       <p style="font-size: 0.85em; color: #777;"></p>
     </section>
 
-    <section style="grid-column: span 3; text-align: center;">
+    </div>
+
+    <div style="text-align: center; margin-top: 20px;">
       <button id="book-services-button" style="
         background-color: #4CAF50;
         color: white;
@@ -112,8 +104,8 @@
         <h3>Special handling for special items.</h3>
         <p>Thanks for choosing FlashMoving Pros. We ensure your high-value or delicate items are moved with the utmost care.</p>
       </div>
-    </section>
-  </div>
+    
+  <script src="../COMPONENTS/footer-magic.js"></script>    
 
   <!-- Shared scripts -->
   <script src="/service_js/book-now-redirect.js"></script>
@@ -121,7 +113,7 @@
   <script src="/service_js/mapbox.js"></script>
   <script src="/service_js/errordisplayer.js"></script>
   <script src="/service_js/cost-caculator.js"></script>
-  <script src="/service_js/TF2.js"></script>
+  <script src="/service_js/bridge.js"></script>
 
 </body>
 
